# SCY1101-Exp1-Drug-Data-Analysis

./: .gitignore  README.md  informe_tecnico_grupal.docx  main.py  presentacion_scy1101.pptx  pyproject.toml  requirements.txt
docs/: analisis_integrado_enfoques.md  decisiones_limpieza.md
docs/enfoque_01_combinaciones_componentes/: README.md  analisis_graficos.md  decisiones_limpieza.md  generar_informe.py  informe_tecnico_enfoque_01.docx
docs/enfoque_02_comparacion_empresas/: README_Enfoque2.md  analisis_graficos_Enfique2.md  decisiones_limpieza.md
docs/enfoque_03_combinaciones_componentes/: README.md  decisiones_limpieza.md  readme_enfoque03.md
docs/sphinx/: Makefile  make.bat
notebooks/: 01_eda_inicial.pre-main-sync.ipynb  README.md
notebooks/enfoque_01_combinaciones_componentes/: 01_eda_combinaciones_componentes.ipynb  02_limpieza_transformacion_combinaciones_componentes.ipynb  03_analisis_combinaciones_componentes.ipynb
notebooks/enfoque_02_comparacion_empresas/: 01_eda_comparacion_empresas.ipynb  02_limpieza_transformacion_comparacion_empresas.ipynb  03_analisis_comparacion_empresas.ipynb
notebooks/enfoque_03_efectos_secundarios_componentes/: 01_eda_efectos_secundarios_componentes.ipynb  02_limpieza_transformacion_efectos_secundarios_componentes.ipynb  03_analisis_efectos_secundarios_componentes.ipynb
notebooks/general/: 01_eda_inicial.ipynb
src/: load_data.py
src/03_efectos_secundarios_componentes/: analysis.py  cleaning.py  validation.py
src/enfoque3/: transform.py
src/enfoque_01_combinaciones_componentes/: analysis.py  cleaning.py  (+2 more)
(+26 files in other folders)
